correct borders and alignment

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,13 @@ body{
     background-color: white;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .tipCalc{
     background-color: lightgray;
     padding:20px;
-    border: 5px;
+    border: 5px black;
     width: 400px;
 }
 
